tdf#130657 Chart OOXML: fix import of charts without CrossBetween

OOXML tag. If an OOXML file do not contain a CrossBetween tag
use the defult values for ShiftedCategoryPosition at import.

Regression from commit: 111c260ab2883b7906f1a66e222dbf4dc3c58c4f
(tdf#127777 OOXML chart export: fix "CrossBetween" for not imported charts)

Change-Id: Idd48a8343e7d6609b487daf7182e9716f2f5e01f